@@ -203,6 +203,29 @@ public class SearchHandler extends RequestHandlerBase implements SolrCoreAware ,
     return result;
   }
 
+  private ShardHandler getAndPrepShardHandler(SolrQueryRequest req, ResponseBuilder rb) {
+    ShardHandler shardHandler = null;
+
+    rb.isDistrib = req.getParams().getBool("distrib", req.getCore().getCoreDescriptor()
+        .getCoreContainer().isZooKeeperAware());
+    if (!rb.isDistrib) {
+      // for back compat, a shards param with URLs like localhost:8983/solr will mean that this
+      // search is distributed.
+      final String shards = req.getParams().get(ShardParams.SHARDS);
+      rb.isDistrib = ((shards != null) && (shards.indexOf('/') > 0));
+    }
+    
+    if (rb.isDistrib) {
+      shardHandler = shardHandlerFactory.getShardHandler();
+      shardHandler.prepDistributed(rb);
+      if (!rb.isDistrib) {
+        shardHandler = null; // request is not distributed after all and so the shard handler is not needed
+      }
+    }
+
+    return shardHandler;
+  }
+  
   @Override
   public void handleRequestBody(SolrQueryRequest req, SolrQueryResponse rsp) throws Exception
   {
@@ -220,9 +243,8 @@ public class SearchHandler extends RequestHandlerBase implements SolrCoreAware ,
 
     final RTimer timer = rb.isDebug() ? req.getRequestTimer() : null;
 
-    ShardHandler shardHandler1 = shardHandlerFactory.getShardHandler();
-    shardHandler1.checkDistributed(rb);
-
+    final ShardHandler shardHandler1 = getAndPrepShardHandler(req, rb); // creates a ShardHandler object only if it's needed
+    
     if (timer == null) {
       // non-debugging prepare phase
       for( SearchComponent c : components ) {
@@ -316,7 +338,7 @@ public class SearchHandler extends RequestHandlerBase implements SolrCoreAware ,
             if (sreq.actualShards==ShardRequest.ALL_SHARDS) {
               sreq.actualShards = rb.shards;
             }
-            sreq.responses = new ArrayList<>();
+            sreq.responses = new ArrayList<>(sreq.actualShards.length); // presume we'll get a response from each shard we send to
 
             // TODO: map from shard to address[]
             for (String shard : sreq.actualShards) {
